--- a/public/css/common.css
+++ b/public/css/common.css
@@ -37,5 +37,13 @@
     background: rgb(0,52,112);
     background: radial-gradient(circle, rgba(0,52,112,1) 52%, rgba(0,25,55,1) 100%);
 }
+.divFile
+{
+    border: 2px solid black;
+    width: 130px;
+    height:80px;
+    margin: 10px;
+    display: inline-block;
+}
 
 
