--- a/public/css/common_customer.css
+++ b/public/css/common_customer.css
@@ -34,15 +34,18 @@
 }
 .container-fluid
 {
-    
+    background: rgb(235,235,235);
+    background: linear-gradient(0deg, rgba(235,235,235,1) 76%, rgba(255,102,102,1) 100%);
+    /*
     background: rgb(0,52,112);
     background: radial-gradient(circle, rgba(0,52,112,1) 52%, rgba(0,25,55,1) 100%);
-    /*
+    
     background: rgb(0,52,112);
     background: radial-gradient(circle, rgba(112,0,0,1) 52%, rgba(166,0,0,1) 100%);
     
     background: rgb(230,230,230);
-    background: radial-gradient(circle, rgba(230,230,230,1) 65%, rgba(223,189,189,1) 100%);*/
+    background: radial-gradient(circle, rgba(230,230,230,1) 65%, rgba(223,189,189,1) 100%);
+    */
 }
 .divFile
 {
@@ -59,8 +62,7 @@
     width: 40%;
     border-radius: 5px;
     display: inline-block;
-    margin: 10px;
-    overflow:hidden;
+    margin: 10px;;
   }
   
   .img_card:hover {
